// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPanel /> @renders should render default state 1`] = `
<ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#cdeeff"
      borderColor="#1795d4"
      color="#666"
      data-name="AC"
      hoverColor="#FFFFFF"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#cdeeff"
      borderColor="#1795d4"
      color="#666"
      data-name="+/-"
      hoverColor="#FFFFFF"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#cdeeff"
      borderColor="#1795d4"
      color="#666"
      data-name="%"
      hoverColor="#FFFFFF"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="÷"
      hoverColor="#000000"
      onClick={[Function]}
      selected={false}
    />
  </ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="7"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="8"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="9"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="x"
      hoverColor="#000000"
      onClick={[Function]}
      selected={false}
    />
  </ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="4"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="5"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="6"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="-"
      hoverColor="#000000"
      onClick={[Function]}
      selected={false}
    />
  </ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="1"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="2"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="3"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="+"
      hoverColor="#000000"
      onClick={[Function]}
      selected={false}
    />
  </ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="0"
      expand={true}
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="."
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="="
      hoverColor="#000000"
      onClick={[Function]}
    />
  </ForwardRef>
</ForwardRef>
`;

exports[`<ButtonPanel /> @renders should render opacity when operator is selected 1`] = `
<ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#cdeeff"
      borderColor="#1795d4"
      color="#666"
      data-name="AC"
      hoverColor="#FFFFFF"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#cdeeff"
      borderColor="#1795d4"
      color="#666"
      data-name="+/-"
      hoverColor="#FFFFFF"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#cdeeff"
      borderColor="#1795d4"
      color="#666"
      data-name="%"
      hoverColor="#FFFFFF"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="÷"
      hoverColor="#000000"
      onClick={[Function]}
      selected={false}
    />
  </ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="7"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="8"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="9"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="x"
      hoverColor="#000000"
      onClick={[Function]}
      selected={false}
    />
  </ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="4"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="5"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="6"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="-"
      hoverColor="#000000"
      onClick={[Function]}
      selected={false}
    />
  </ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="1"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="2"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="3"
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="+"
      hoverColor="#000000"
      onClick={[Function]}
      selected={true}
    />
  </ForwardRef>
  <ForwardRef>
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="0"
      expand={true}
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#373d45"
      borderColor="#949494"
      color="#FFFFFF"
      data-name="."
      hoverColor="#000000"
      onClick={[Function]}
    />
    <Unknown
      bgColor="#fed800"
      borderColor="#d4b526"
      color="#000000"
      data-name="="
      hoverColor="#000000"
      onClick={[Function]}
    />
  </ForwardRef>
</ForwardRef>
`;
